Add backend user registration

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-apiKey=
-authDomain=
-projectId=
-storageBucket=
-messagingSenderId=
-appId=
-measurementId=
+apiKey=AIzaSyCPrkrKh12m3knnDBJMVjg2JuP6Jdgm4F8
+authDomain=jobee-a3f4c.firebaseapp.com
+projectId=jobee-a3f4c
+storageBucket=jobee-a3f4c.appspot.com
+messagingSenderId=655147211068
+appId=1:655147211068:web:efad8985bedc60e6372639
+measurementId=G-SZXM1D7FW5
